--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,13 @@
   .side-bar__user-name
     .top-items
       %p.top-items__name
-        MASA
+        = current_user.name
       %ul.top-items__icons
         %li.top-items__icon
-          = link_to "#" do
+          = link_to "new.html.haml" do
             = icon('fas', 'edit', class: "edit-icon")
         %li.top-items__icon
-          = link_to "#" do
+          = link_to edit_user_path(current_user) do
             = icon('fas', 'cog' , class: "cog-icon")
   .side-bar__group
     .side-bar__group-name
