--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
-.Chat-main__message-list
-  .chat-main__message-box
+.Message-box
+  .Message-Info
     .chat-box-name
       = message.user.name
     .chat-box-date
