--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -13,10 +13,9 @@
   .side-bar__group-list
     - current_user.groups.each do |group|
       .side-bar__group
-        = link_to '#' do { class: "a"}
+        = link_to group_messages_path(group) , class:"group" do
           .side-bar__group-name
             = group.name
           .side-bar__group-messages
-            メッセージはまだありません
-      
+            = group.show_last_message
 
