create chat-space Ajax2

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -91,7 +91,7 @@
             }
           }
         }
-      .edit-btn {
+      .edit-button {
         display: block;
         border: 1px solid #38aef0;
         color: #38aef0;
